# Agentic-AI-application---Microsoft-demo-extension-project

./: .gitignore  README.md  docker-compose.yml  pytest.ini  requirements.txt
app/: agent.py  models.py  worker.py
app/tools/: places_api.py
food-recommender-agent/: .gitignore  Dockerfile  docker-compose.yml
food-recommender-agent/app/: agent.py  main.py  models.py  worker.py
food-recommender-agent/app/core/: config.py
food-recommender-agent/app/tests/: mock_agent3.py
food-recommender-agent/tests/: mock_agent3.py  test_agent4.py
orchestrator-agent/: .env.example  Dockerfile  README.md  docker-compose.yml  pytest.ini  requirements.txt
orchestrator-agent/app/: agent.py  main.py  models.py  worker.py
orchestrator-agent/tests/: test_client.py  test_models.py  test_orchestrator.py  test_orchestrator_mocked.py  test_pipeline_mocked.py  test_scheduler.py  test_verification.py
place-clustering-agent/: Dockerfile  pyproject.toml
place-clustering-agent/app/: client.py  clustering.py  input.json  main.py  models.py  system-prompts.yml  temp1.py
place-recommender-agent/: Dockerfile  pyproject.toml
place-recommender-agent/app/: agent.py  client.py  config.py  input.json  llm.py  main.py  mcps.py  system-prompts.yml  temp1.py
place-recommender-agent/app/files/: agent_cards.yml  system_prompts.yml
visiting-place-clustering-agent/: Dockerfile  docker-compose.yml  pytest.ini  requirements.txt
visiting-place-clustering-agent/app/: agent.py  main.py  models.py  worker.py
visiting-place-clustering-agent/tests/: mock_orchestrator.py  test_agent2.py
(+8 files in other folders)
